multi-class CNN's part4 (134)

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -3817,11 +3818,11 @@
         "                                             class_mode=\"categorical\")"
       ],
       "metadata": {
-        "id": "bg519X7VTT4L",
-        "outputId": "1de16cae-f3e6-46b0-ac9c-fe1f7f59960a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bg519X7VTT4L",
+        "outputId": "1de16cae-f3e6-46b0-ac9c-fe1f7f59960a"
       },
       "execution_count": 125,
       "outputs": [
@@ -3845,6 +3846,178 @@
       "metadata": {
         "id": "BlIwtSm3VmHg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPool2D, Flatten, Dense, Activation\n",
+        "\n",
+        "# Create our model (very similar to previous models but actually the same as CNN explainer website)\n",
+        "model_8 = Sequential([\n",
+        "    Conv2D(10, 3, input_shape=(224, 224, 3)),\n",
+        "    Activation(activation=\"relu\"),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    MaxPool2D(),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    MaxPool2D(),\n",
+        "    Flatten(),\n",
+        "    Dense(10, activation=\"softmax\") # changed to have 10 output neurons and use the softmax activation funciton\n",
+        "])\n",
+        "\n",
+        "# Compile the model\n",
+        "model_8.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n"
+      ],
+      "metadata": {
+        "id": "bNXb7wCNX5Kx",
+        "outputId": "50c4d67a-19f9-409a-dd23-c30ac8765213",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Fit a model"
+      ],
+      "metadata": {
+        "id": "AZ9MXa_yZ151"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history_8 = model_8.fit(train_data, # now 10 different classes\n",
+        "                        epochs=5,\n",
+        "                        steps_per_epoch=len(train_data),\n",
+        "                        validation_data=test_data,\n",
+        "                        validation_steps=len(test_data))"
+      ],
+      "metadata": {
+        "id": "2-FQN80DZ_Ae",
+        "outputId": "67f0ce5a-c34a-4f7a-e831-2c2930d292c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+            "  self._warn_if_super_not_called()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m235/235\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 132ms/step - accuracy: 0.1572 - loss: 2.2526 - val_accuracy: 0.3132 - val_loss: 1.9502\n",
+            "Epoch 2/5\n",
+            "\u001b[1m235/235\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 143ms/step - accuracy: 0.3449 - loss: 1.8815 - val_accuracy: 0.3476 - val_loss: 1.8596\n",
+            "Epoch 3/5\n",
+            "\u001b[1m235/235\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 134ms/step - accuracy: 0.4930 - loss: 1.5557 - val_accuracy: 0.3628 - val_loss: 1.8955\n",
+            "Epoch 4/5\n",
+            "\u001b[1m235/235\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 127ms/step - accuracy: 0.6914 - loss: 0.9547 - val_accuracy: 0.3344 - val_loss: 2.1573\n",
+            "Epoch 5/5\n",
+            "\u001b[1m235/235\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 132ms/step - accuracy: 0.8866 - loss: 0.3978 - val_accuracy: 0.2896 - val_loss: 3.1586\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(train_data)"
+      ],
+      "metadata": {
+        "id": "nuXUk0Wzah5U",
+        "outputId": "e3e79671-71a9-473b-f2f9-bd4de72308fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "235"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Evaluate the model"
+      ],
+      "metadata": {
+        "id": "kJBJI36FbG2_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate on test data\n",
+        "model_8.evaluate(test_data)"
+      ],
+      "metadata": {
+        "id": "66OAFLqRbQ2t",
+        "outputId": "f3acec12-b7ba-483d-cb61-6ac06a9e63ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 81ms/step - accuracy: 0.2872 - loss: 3.1093\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3.158608913421631, 0.2896000146865845]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
     }
   ]
 }
