multi-class CNN's part9

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -4412,11 +4412,11 @@
         "                                                                    class_mode=\"categorical\")"
       ],
       "metadata": {
-        "id": "oYIWVC_rQtEt",
-        "outputId": "afa91ab7-1650-43d8-98f9-be6c7c4a5db1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oYIWVC_rQtEt",
+        "outputId": "afa91ab7-1650-43d8-98f9-be6c7c4a5db1"
       },
       "execution_count": 83,
       "outputs": [
@@ -4457,11 +4457,11 @@
         "                          validation_steps=len(test_data))"
       ],
       "metadata": {
-        "id": "5axiKn_sJgCo",
-        "outputId": "7f72fd2b-1a18-4ae9-c4c7-5a3abbd10394",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5axiKn_sJgCo",
+        "outputId": "7f72fd2b-1a18-4ae9-c4c7-5a3abbd10394"
       },
       "execution_count": 88,
       "outputs": [
@@ -4497,11 +4497,11 @@
         "model_8.evaluate(test_data)"
       ],
       "metadata": {
-        "id": "al7K0B28KYmX",
-        "outputId": "bbfd1ad5-1a63-411e-86f7-531bd819d1dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "al7K0B28KYmX",
+        "outputId": "bbfd1ad5-1a63-411e-86f7-531bd819d1dd"
       },
       "execution_count": 89,
       "outputs": [
@@ -4530,11 +4530,11 @@
         "model_10.evaluate(test_data)"
       ],
       "metadata": {
-        "id": "FDDZoiSiKbgN",
-        "outputId": "a7c53b32-f435-48d8-f109-297455269a1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FDDZoiSiKbgN",
+        "outputId": "a7c53b32-f435-48d8-f109-297455269a1f"
       },
       "execution_count": 90,
       "outputs": [
@@ -4563,12 +4563,12 @@
         "model_10.summary()"
       ],
       "metadata": {
-        "id": "8YW9yK8nJWDh",
-        "outputId": "b640c5a7-4f81-415a-99ac-2df2326007b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
-        }
+        },
+        "id": "8YW9yK8nJWDh",
+        "outputId": "b640c5a7-4f81-415a-99ac-2df2326007b0"
       },
       "execution_count": 85,
       "outputs": [
@@ -4685,12 +4685,12 @@
         "model_8.summary()"
       ],
       "metadata": {
-        "id": "o_lXBbYjJYL2",
-        "outputId": "a0afdd36-13fa-4cd1-a39c-537cfbaab664",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
-        }
+        },
+        "id": "o_lXBbYjJYL2",
+        "outputId": "a0afdd36-13fa-4cd1-a39c-537cfbaab664"
       },
       "execution_count": 86,
       "outputs": [
@@ -4821,12 +4821,12 @@
         "plot_loss_curves(history_10)"
       ],
       "metadata": {
-        "id": "nN2NsimvPecB",
-        "outputId": "c6fddacf-2d14-4fbb-b316-4f25a8ff166e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "nN2NsimvPecB",
+        "outputId": "c6fddacf-2d14-4fbb-b316-4f25a8ff166e"
       },
       "execution_count": 91,
       "outputs": [
@@ -4858,12 +4858,12 @@
         "plot_loss_curves(history_8)"
       ],
       "metadata": {
-        "id": "VJbJwPAiPuaG",
-        "outputId": "5f066299-0e89-4a8a-ae55-a9ee1160318b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "VJbJwPAiPuaG",
+        "outputId": "5f066299-0e89-4a8a-ae55-a9ee1160318b"
       },
       "execution_count": 92,
       "outputs": [
@@ -4901,20 +4901,59 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 7. Repeat until satisfied"
+        "## 7. Repeat until satisfied\n",
+        "\n",
+        "We could keep going here... continally trying to bring our loss curves closer together and trying to improve the validation/test accuracy.\n",
+        "\n",
+        "How?\n",
+        "\n",
+        "By running lots of experiments, namely:\n",
+        "-restructuring our model's achitecture (increasing layers/hidden units)\n",
+        "- adjust the learning rate\n",
+        "- try different methodes of data augmentation (adjust the hyperpatamers in our ImageDataGeenrator instance)\n",
+        "- training for longer (q.g. 10 epochs instead of 5 epochs)\n",
+        "- try **transfer learning**"
       ],
       "metadata": {
         "id": "aWFg_xGKQbTu"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Making a prediction with our trained model"
+      ],
       "metadata": {
         "id": "irABOu2pQh17"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names"
+      ],
+      "metadata": {
+        "id": "fVhpVi2wSFJd",
+        "outputId": "5eb2adf3-fd94-4dfb-c4e0-4738bd44e86d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['chicken_curry', 'chicken_wings', 'fried_rice', 'grilled_salmon',\n",
+              "       'hamburger', 'ice_cream', 'pizza', 'ramen', 'steak', 'sushi'],\n",
+              "      dtype='<U14')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
     }
   ]
 }
