--- a/04_transfer_learning_in_tensorflow_p1.ipynb
+++ b/04_transfer_learning_in_tensorflow_p1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPJRkSnyIwvrCaMeaLRBlbs"
+      "authorship_tag": "ABX9TyNBhYYXKUHx2grKO1JJMRth"
     },
     "kernelspec": {
       "name": "python3",
@@ -234,6 +234,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Setting up callbacks (things to run whilst our model trains)\n",
+        "\n",
+        "Callback are extra functionality you can add to your models to be performed during or after training. Some of the most popular callbacks:\n",
+        "\n",
+        "* Tracking experiments with the TensorBoard callback\n",
+        "* Model checkpoint with the ModelCheckpoint callback\n",
+        "* Stopping a model from training (before it trains too long and overfits) with the EarlyStopping callback"
+      ],
+      "metadata": {
+        "id": "zu0EjnDV6wVI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creat tendorboard callback (functionized because need to create a new one for each model)\n",
+        "import datetime\n",
+        "def create_tensorboard_callback(dir_name, experiment_name):\n",
+        "  log_dir = dir_name + \"/\" + experiment_name + \"/\" + datetime.datetime.now().strftime(\"%Y%m%d=%H%M%S\")\n",
+        "  tensorboard_callback = tf.keras.callbacks.TensorBoard(\n",
+        "      log_dir=log_dir\n",
+        "  )\n",
+        "  print(f\"Saving TensorBoard log files to: {log_dir}\")\n",
+        "  return tensorboard_callback"
+      ],
+      "metadata": {
+        "id": "tkoUPpNc9p-z"
+      },
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
