Exploring the TensorFlow Hub (145)

--- a/04_transfer_learning_in_tensorflow_p1.ipynb
+++ b/04_transfer_learning_in_tensorflow_p1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNBhYYXKUHx2grKO1JJMRth"
+      "authorship_tag": "ABX9TyOBfvVp+er+d/pO9xeDyZkT"
     },
     "kernelspec": {
       "name": "python3",
@@ -268,6 +268,23 @@
       },
       "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating model using TensorFlow Hub\n",
+        "\n",
+        "In the past we've used TensorFlow to create our own models layer by layer from scratch.\n",
+        "\n",
+        "Now we're going to do a similar process, except the majority of our model's layer are going to come from TensorFlow Hub.\n",
+        "\n",
+        "We can access pretrained models on: https://tfhub.dev/\n",
+        "\n",
+        "Browsing the tensorFlow hub page and sorting for image classification, we found the following feature vector model link: tensorflow/efficientnet/tensorFlow2/b0-feature-vector"
+      ],
+      "metadata": {
+        "id": "bS5spDJNNsRO"
+      }
     }
   ]
 }
