plotting the loss curves of our ResNet (148)

--- a/04_transfer_learning_in_tensorflow_p1.ipynb
+++ b/04_transfer_learning_in_tensorflow_p1.ipynb
@@ -463,11 +463,11 @@
         "                                                                         # name of log files"
       ],
       "metadata": {
-        "id": "LBFaRMfX0ZrU",
-        "outputId": "f7c6ce3a-f5bb-4f3e-dc8c-8e5ca7e46962",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LBFaRMfX0ZrU",
+        "outputId": "f7c6ce3a-f5bb-4f3e-dc8c-8e5ca7e46962"
       },
       "execution_count": 14,
       "outputs": [
@@ -507,11 +507,11 @@
         "resnet_model.summary()"
       ],
       "metadata": {
-        "id": "LKT6kuef90AA",
-        "outputId": "50b39455-4452-40a8-b954-f965919eb416",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LKT6kuef90AA",
+        "outputId": "50b39455-4452-40a8-b954-f965919eb416"
       },
       "execution_count": 12,
       "outputs": [
@@ -540,12 +540,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# Let's create a function to plot our loss curves\n",
+        "# Tidbit: you could put a function like this into a script called \"helper.py\" and import it when you need it...\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Plot the validation and training data separately\n",
         "def plot_loss_curves(history):\n",
         "  \"\"\"\n",
         "  Returns separate loss curves for training and validation metrics.\n",
+        "\n",
+        "  Args:\n",
+        "    history: TensorFlow History object.\n",
+        "\n",
+        "  Returns:\n",
+        "    Plots of training/validation loss and accuracy metrics\n",
         "  \"\"\"\n",
         "  loss = history.history['loss']\n",
         "  val_loss = history.history['val_loss']\n",
@@ -582,12 +590,12 @@
         "plot_loss_curves(resnet_history)"
       ],
       "metadata": {
-        "id": "oOXkGKb534oQ",
-        "outputId": "47f13a7f-72d9-47ab-aab9-1e5e62accfd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "oOXkGKb534oQ",
+        "outputId": "47f13a7f-72d9-47ab-aab9-1e5e62accfd2"
       },
       "execution_count": 20,
       "outputs": [
@@ -612,6 +620,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating and testing EfficientNetB0 TensorFlow Hub Feature Extraction model"
+      ],
+      "metadata": {
+        "id": "bLghK78w_GVD"
+      }
     },
     {
       "cell_type": "code",
